# node/web-demo/src/api/index.ts
@@ -8,6 +8,7 @@ export type {
   CreateDatabaseResponse,
   CreateStatementResponse,
   DatabaseInfo,
+  QueryRequest,
   SetSqlQueryRequest,
   DeleteConnection204,
   DeleteConnection404,
@@ -32,6 +33,12 @@ export type {
   GetConnectionObjects404,
   GetConnectionObjectsQueryResponse,
   GetConnectionObjectsQuery,
+  QueryConnectionIpc200,
+  QueryConnectionIpc404,
+  QueryConnectionIpc500,
+  QueryConnectionIpcMutationRequest,
+  QueryConnectionIpcMutationResponse,
+  QueryConnectionIpcMutation,
   RollbackConnection204,
   RollbackConnection404,
   RollbackConnection500,
@@ -115,6 +122,7 @@ export {
   createDatabaseResponseSchema,
   createStatementResponseSchema,
   databaseInfoSchema,
+  queryRequestSchema,
   setSqlQueryRequestSchema,
   deleteConnection204Schema,
   deleteConnection404Schema,
@@ -134,6 +142,11 @@ export {
   getConnectionObjects200Schema,
   getConnectionObjects404Schema,
   getConnectionObjectsQueryResponseSchema,
+  queryConnectionIpc200Schema,
+  queryConnectionIpc404Schema,
+  queryConnectionIpc500Schema,
+  queryConnectionIpcMutationRequestSchema,
+  queryConnectionIpcMutationResponseSchema,
   rollbackConnection204Schema,
   rollbackConnection404Schema,
   rollbackConnection500Schema,
